[package]
name = "chrono-tz-postgres"
version = "0.8.1"
authors = ["Allan Zhang <al@ayz.ai>"]
categories = ["date-and-time", "database"]
description = "Typed timezones in Rust and PostgreSQL"
edition = "2021"
homepage = "https://github.com/allan2/chrono-tz-postgres"
keywords = ["chrono-tz", "chrono", "tz", "postgres", "timezone"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/allan2/chrono-tz-postgres"
rust-version = "1.60.0"

[dependencies]
postgres-types = { version = "0.2", features = ["derive"] }
chrono-tz = { version = "0.8.1" }
